After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 668941 - Memory leak when parsing a RenderTransform element fails
Memory leak when parsing a RenderTransform element fails
Status: RESOLVED FIXED
Product: libgxps
Classification: Platform
Component: general
0.2.x
Other Linux
: Normal minor
: ---
Assigned To: libgxps maintainers
libgxps maintainers
Depends on:
Blocks:
 
 
Reported: 2012-01-29 04:17 UTC by Jason Crain
Modified: 2012-01-29 14:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
add error handler to matrix GMarkupParser (1.20 KB, patch)
2012-01-29 04:17 UTC, Jason Crain
committed Details | Review

Description Jason Crain 2012-01-29 04:17:07 UTC
Created attachment 206347 [details] [review]
add error handler to matrix GMarkupParser

A GXPSMatrix struct is leaked when parsing fails for a XXX.RenderTransform element.

Example:

<Path>
  <Path.RenderTransform>
    <invalid />
  </Path.RenderTransform>
</Path>

Parsing is aborted when invalid data is encountered and cleanup code is not run.  This adds a error handler to the matrix GMarkupParser to free the struct on error.
Comment 1 Carlos Garcia Campos 2012-01-29 14:10:17 UTC
Review of attachment 206347 [details] [review]:

Pushed to git master. Thanks!