Fixed memory leak when parsing a RenderTransform element fails

A GXPSMatrix struct is leaked when parsing fails for a
XXX.RenderTransform element.  Parsing is aborted when invalid data is
encountered and cleanup code is not run.  This adds a error handler to
the matrix GMarkupParser to free the struct on error.

https://bugzilla.gnome.org/show_bug.cgi?id=668941